	Reported by Achim Grolms.
	- Added support for ENGINE_load_builtin_engines and
	ENGINE_register_all_complete in order to enable built-in OpenSSL
	crypto engines for hardware acceleration etc.
	- Added support for ENGINE_by_id and ENGINE_set_default, required
	to enable Sun crypto acceleration

1.35 25.07.208
	- Fix test plan for autoload.t if Test::Exception isn't available.
	- Skip rsa_generate_key.t if Test::Exception isn't available.

????
	- Fix problems with building on GNU/kFreeBSD, to do with use of pack
	instread of sockaddr_in. Patched by Debian Perl Group.
	- SSL_set_session_secret_cb required for EAP-FAST is now enabled for both 
	SSL_F_SSL_SET_HELLO_EXTENSION and
	SSL_F_SSL_SET_SESSION_TICKET_EXT. The name of this #define
	changed after 0.9.8i. SSL_set_hello_extension is not available after
	0.9.8i.
	- Added SSL_CTX_get_client_CA_list sk_X509_NAME_free sk_X509_NAME_num
	sk_X509_NAME_value SSL_get_client_CA_list, from patch provided by
	Joerg Schneider
	- Added EVP_add_digest and EVP_sha256 (if available)
	- Patches from "Martijn van Beers via RT" to add SSL_SENT_SHUTDOWN 
	and SSL_RECEIVED_SHUTDOWN, remove broken URLs,
	and to fix some documentation issues.
	- Various changes to build with OpenSSL 1.0 beta1:
	SSL_SESSION_cmp has been removed
	return type of SSL_CTX_sessions changed in an ugly way
	- 07_ssl_echo.t verify callbacks are called twice, with ok = 0 then ok = 1
	- Fixed a build problem reported by SISYPHUS:
	On Windows Vista64, ActivePerl 5.10.0 (build 1004, x64), running 'nmake 
	test', the process hangs forever when it comes to building the test 
	executable (as the executable fails to build).
	- Fixed a compile problem in t/local/ptr_cast_test.c for some gcc
	versions. Reported by "Ryan McGuigan via RT".
	- Applied patch from ecmenifee in
	https://rt.cpan.org/Public/Bug/Display.html?id=48132 to improve
	handling of errors in ssl_write_all
	- Patch to permit compile and testing on OS/2 submitted by Ilya Zakharevich.
#EOF